[package]
name = "injector-gui-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["Solastis"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
dll-syringe = "0.15.0"
color-eyre = "0.6.2"
ctor = "0.1.26"
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef"] }
chrono = "0.4.19"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
